net/mlx4_en: Avoid scheduling restart task if it is already running (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57056,6 +57056,7 @@
 	patches.suse/cfg80211-initialize-rekey_data.patch
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
+	patches.suse/net-mlx4_en-Avoid-scheduling-restart-task-if-it-is-a.patch
 	patches.suse/gpio-mvebu-fix-potential-user-after-free-on-probe.patch
 	patches.suse/pinctrl-merrifield-Set-default-bias-in-case-no-parti.patch
 	patches.suse/pinctrl-baytrail-Avoid-clearing-debounce-value-when-.patch
