--- a/series.conf
+++ b/series.conf
@@ -54025,6 +54025,7 @@
 	patches.suse/IB-hfi1-Close-window-for-pq-and-request-coliding.patch
 	patches.suse/IB-rdmavt-Reset-all-QPs-when-the-device-is-shut-down.patch
 	patches.suse/RDMA-core-Fix-invalid-memory-access-in-spec_filter_s.patch
+	patches.suse/RDMA-iw_cxgb4-initiate-CLOSE-when-entering-TERM.patch
 	patches.suse/IB-umad-Fix-kernel-crash-while-unloading-ib_umad.patch
 	patches.suse/RDMA-rxe-Fix-soft-lockup-problem-due-to-using-taskle.patch
 	patches.suse/Input-synaptics-switch-T470s-to-RMI4-by-default.patch
