--- a/series.conf
+++ b/series.conf
@@ -54008,6 +54008,7 @@
 	patches.suse/0001-enic-prevent-waking-up-stopped-tx-queues-over-watchd.patch
 	patches.suse/net-sched-matchall-add-missing-validation-of-TCA_MAT.patch
 	patches.suse/net-sched-flower-add-missing-validation-of-TCA_FLOWE.patch
+	patches.suse/net-hns3-add-management-table-after-IMP-reset.patch
 	patches.suse/net-hns3-fix-a-copying-IPv6-address-error-in-hclge_f.patch
 	patches.suse/net-smc-transfer-fasync_list-in-case-of-fallback
 	patches.suse/net-smc-no-peer-id-in-clc-decline-for-smcd
