--- a/series.conf
+++ b/series.conf
@@ -55088,6 +55088,7 @@
 	patches.suse/net-sched-fix-reporting-the-first-time-use-timestamp.patch
 	patches.suse/r8152-support-additional-Microsoft-Surface-Ethernet-.patch
 	patches.suse/net-inet_csk-Fix-so_reuseport-bind-address-cache-in-.patch
+	patches.suse/__netif_receive_skb_core-pass-skb-by-reference.patch
 	patches.suse/sctp-Don-t-add-the-shutdown-timer-if-its-already-bee.patch
 	patches.suse/ax25-fix-setsockopt-SO_BINDTODEVICE.patch
 	patches.suse/net-qrtr-Fix-passing-invalid-reference-to-qrtr_local.patch
