--- a/series.conf
+++ b/series.conf
@@ -55271,6 +55271,7 @@
 	patches.suse/ipv6-fix-IPV6_ADDRFORM-operation-logic.patch
 	patches.suse/s390-bpf-maintain-8-byte-stack-alignment
 	patches.suse/vmxnet3-allow-rx-flow-hash-ops-only-when-rss-is-enab.patch
+	patches.suse/net_failover-fixed-rollback-in-net_failover_open.patch
 	patches.suse/media-dvb-return-EREMOTEIO-on-i2c-transfer-failure.patch
 	patches.suse/media-platform-fcp-Set-appropriate-DMA-parameters.patch
 	patches.suse/media-si2157-Better-check-for-running-tuner-in-init.patch
