--- a/series.conf
+++ b/series.conf
@@ -51525,6 +51525,7 @@
 	patches.suse/net-hns3-clear-reset-interrupt-status-in-hclge_irq_h.patch
 	patches.suse/cxgb4-smt-Add-lock-for-atomic_dec_and_test.patch
 	patches.suse/net-hns3-fix-GFP-flag-error-in-hclge_mac_update_stat.patch
+	patches.suse/net-hns3-fix-interrupt-clearing-error-for-VF.patch
 	patches.suse/0052-xgbe-no-need-to-check-return-value-of-debugfs_create.patch
 	patches.suse/0005-caif-no-need-to-check-return-value-of-debugfs_create.patch
 	patches.suse/netfilter-connlabels-prefer-static-lock-initialiser.patch
