--- a/series.conf
+++ b/series.conf
@@ -55648,6 +55648,7 @@
 	patches.suse/tcp-md5-do-not-send-silly-options-in-SYNCOOKIES.patch
 	patches.suse/sched-consistently-handle-layer3-header-accesses-in-.patch
 	patches.suse/net-hns3-add-a-missing-uninit-debugfs-when-unload-dr.patch
+	patches.suse/net-hns3-fix-use-after-free-when-doing-self-test.patch
 	patches.suse/net-usb-qmi_wwan-add-support-for-Quectel-EG95-LTE-mo.patch
 	patches.suse/cgroup-fix-cgroup_sk_alloc-for-sk_clone_lock.patch
 	patches.suse/ipv4-fill-fl4_icmp_-type-code-in-ping_v4_sendmsg.patch
