--- a/series.conf
+++ b/series.conf
@@ -56477,6 +56477,7 @@
 	patches.suse/0006-drbd-code-cleanup-by-using-sendpage_ok-to-check-page.patch
 	patches.suse/0007-scsi-libiscsi-use-sendpage_ok-in-iscsi_tcp_segment_m.patch
 	patches.suse/0008-libceph-use-sendpage_ok-in-ceph_tcp_sendpage.patch
+	patches.suse/net-mlx5e-Fix-VLAN-cleanup-flow.patch
 	patches.suse/platform-x86-thinkpad_acpi-initialize-tp_nvram_state.patch
 	patches.suse/platform-x86-fix-kconfig-dependency-warning-for-FUJI.patch
 	patches.suse/platform-x86-thinkpad_acpi-re-initialize-ACPI-buffer.patch
