--- a/series.conf
+++ b/series.conf
@@ -55555,6 +55555,7 @@
 	patches.suse/cxgb4-use-unaligned-conversion-for-fetching-timestam.patch
 	patches.suse/cxgb4-use-correct-type-for-all-mask-IP-address-compa.patch
 	patches.suse/cxgb4-fix-SGE-queue-dump-destination-buffer-context.patch
+	patches.suse/cxgb4-remove-cast-when-saving-IPv4-partial-checksum.patch
 	patches.suse/net-Do-not-clear-the-sock-TX-queue-in-sk_set_socket.patch
 	patches.suse/net-bridge-enfore-alignment-for-ethernet-address.patch
 	patches.suse/tcp_cubic-fix-spurious-HYSTART_DELAY-exit-upon-drop-.patch
