--- a/series.conf
+++ b/series.conf
@@ -52503,6 +52503,7 @@
 	patches.suse/slip-Fix-memory-leak-in-slip_open-error-path.patch
 	patches.suse/net-cdc_ncm-Signedness-bug-in-cdc_ncm_set_dgram_size.patch
 	patches.suse/slcan-Fix-memory-leak-in-error-path.patch
+	patches.suse/net-hns3-reallocate-SSU-buffer-size-when-pfc_en-chan.patch
 	patches.suse/net-hns3-fix-ETS-bandwidth-validation-bug.patch
 	patches.suse/ax88172a-fix-information-leak-on-short-answers.patch
 	patches.suse/net-smc-fix-fastopen-for-non-blocking-connect
