--- a/series.conf
+++ b/series.conf
@@ -55743,6 +55743,7 @@
 	patches.suse/nfc-s3fwrn5-add-missing-release-on-skb-in-s3fwrn5_re.patch
 	patches.suse/net-sysfs-add-a-newline-when-printing-tx_timeout-by-.patch
 	patches.suse/0011-net-udp-Fix-wrong-clean-up-for-IS_UDPLITE-macro.patch
+	patches.suse/net-hns3-fix-for-not-calculating-TX-BD-send-size-cor.patch
 	patches.suse/qed-suppress-don-t-support-RoCE-iWARP-flooding-on-HW.patch
 	patches.suse/qed-suppress-false-positives-interrupt-error-message.patch
 	patches.suse/drivers-net-wan-x25_asy-Fix-to-make-it-work.patch
