RDMA/hns: bugfix for slab-out-of-bounds when loading hip08 driver (bsc#1104427 FATE#326416).

--- a/series.conf
+++ b/series.conf
@@ -51731,6 +51731,7 @@
 	patches.suse/IB-hfi1-Remove-unused-define.patch
 	patches.suse/RDMA-hns-Fix-comparison-of-unsigned-long-variable-en.patch
 	patches.suse/RDMA-hns-Bugfix-for-slab-out-of-bounds-when-unloadin.patch
+	patches.suse/RDMA-hns-bugfix-for-slab-out-of-bounds-when-loading-.patch
 	patches.suse/RDMA-hns-Remove-the-some-magic-number.patch
 	patches.suse/RDMA-hns-Add-reset-process-for-function-clear.patch
 	patches.suse/RDMA-hns-Fix-wrong-assignment-of-qp_access_flags.patch
