--- a/series.conf
+++ b/series.conf
@@ -51577,6 +51577,7 @@
 	patches.suse/net-ena-fix-update-of-interrupt-moderation-register.patch
 	patches.suse/net-ena-fix-retrieval-of-nonadaptive-interrupt-moder.patch
 	patches.suse/net-ena-fix-incorrect-update-of-intr_delay_resolutio.patch
+	patches.suse/net_sched-let-qdisc_put-accept-NULL-pointer.patch
 	patches.suse/net-ena-don-t-wake-up-tx-queue-when-down.patch
 	patches.suse/0001-xen-netfront-do-not-assume-sk_buff_head-list-is-empt.patch
 	patches.suse/btrfs-volumes-Remove-ENOSPC-prone-btrfs_can_relocate.patch
