--- a/series.conf
+++ b/series.conf
@@ -51554,6 +51554,7 @@
 	patches.suse/msft-hv-1945-hv_netvsc-Allow-scatter-gather-feature-to-be-tunable.patch
 	patches.suse/ixgbe-sync-the-first-fragment-unconditionally.patch
 	patches.suse/i40e-Add-support-for-X710-device.patch
+	patches.suse/net-hns3-fix-shaper-parameter-algorithm.patch
 	patches.suse/net-hns3-fix-port-setting-handle-for-fibre-port.patch
 	patches.suse/net-mlx5-FWTrace-Reduce-stack-usage.patch
 	patches.suse/nl80211-Fix-possible-Spectre-v1-for-CQM-RSSI-4b2c5a14.patch
