--- a/series.conf
+++ b/series.conf
@@ -54318,6 +54318,7 @@
 	patches.suse/net-ena-avoid-memory-access-violation-by-validating-.patch
 	patches.suse/net-ena-fix-continuous-keep-alive-resets.patch
 	patches.suse/vxlan-check-return-value-of-gro_cells_init.patch
+	patches.suse/cxgb4-fix-throughput-drop-during-Tx-backpressure.patch
 	patches.suse/cxgb4-fix-Txq-restart-check-during-backpressure.patch
 	patches.suse/hsr-fix-general-protection-fault-in-hsr_addr_is_self.patch
 	patches.suse/slcan-not-call-free_netdev-before-rtnl_unlock-in-slc.patch
