--- a/series.conf
+++ b/series.conf
@@ -55230,6 +55230,7 @@
 	patches.suse/ath9k_htc-Silence-undersized-packet-warnings.patch
 	patches.suse/Bluetooth-Handle-Inquiry-Cancel-error-after-Inquiry-.patch
 	patches.suse/veth-Adjust-hard_start-offset-on-redirect-XDP-frames.patch
+	patches.suse/ixgbe-Fix-XDP-redirect-on-archs-with-PAGE_SIZE-above.patch
 	patches.suse/e1000-Do-not-perform-reset-in-reset_task-if-we-are-a.patch
 	patches.suse/net-ena-add-support-for-the-rx-offset-feature.patch
 	patches.suse/net-ena-rename-ena_com_free_desc-to-make-API-more-un.patch
