--- a/series.conf
+++ b/series.conf
@@ -57030,6 +57030,7 @@
 	patches.suse/ibmvnic-delay-next-reset-if-hard-reset-fails.patch
 	patches.suse/inet_ecn-Fix-endianness-of-checksum-update-when-sett.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
+	patches.suse/cxgb3-fix-error-return-code-in-t3_sge_alloc_qset.patch
 	patches.suse/drm-rockchip-Avoid-uninitialized-use-of-endpoint-id-.patch
 	patches.suse/msft-hv-2173-scsi-storvsc-Fix-error-return-in-storvsc_probe.patch
 	patches.suse/powerpc-64s-Fix-hash-ISA-v3.0-TLBIEL-instruction-gen.patch
