--- a/series.conf
+++ b/series.conf
@@ -51730,6 +51730,7 @@
 	patches.suse/0001-drm-amdkfd-fix-a-use-after-free-race-with-mmu_notife.patch
 	patches.suse/IB-hfi1-Remove-unused-define.patch
 	patches.suse/RDMA-hns-Fix-comparison-of-unsigned-long-variable-en.patch
+	patches.suse/RDMA-hns-Bugfix-for-slab-out-of-bounds-when-unloadin.patch
 	patches.suse/RDMA-hns-Remove-the-some-magic-number.patch
 	patches.suse/RDMA-hns-Add-reset-process-for-function-clear.patch
 	patches.suse/RDMA-hns-Fix-wrong-assignment-of-qp_access_flags.patch
