--- a/series.conf
+++ b/series.conf
@@ -54495,6 +54495,7 @@
 	patches.suse/Crypto-chelsio-Fixes-a-hang-issue-during-driver-regi.patch
 	patches.suse/Crypto-chelsio-Fixes-a-deadlock-between-rtnl_lock-an.patch
 	patches.suse/net-ena-Make-some-functions-static.patch
+	patches.suse/qed-Fix-use-after-free-in-qed_chain_free.patch
 	patches.suse/net-dsa-bcm_sf2-Fix-overflow-checks.patch
 	patches.suse/mac80211-fix-authentication-with-iwlwifi-mvm.patch
 	patches.suse/ipv4-fix-a-RCU-list-lock-in-fib_triestat_seq_show.patch
