--- a/series.conf
+++ b/series.conf
@@ -52228,6 +52228,7 @@
 	patches.suse/ipv4-Return-ENETUNREACH-if-we-can-t-create-route-but.patch
 	patches.suse/net-phy-bcm7xxx-define-soft_reset-for-40nm-EPHY.patch
 	patches.suse/net-bcmgenet-reset-40nm-EPHY-on-energy-detect.patch
+	patches.suse/net-hns3-fix-mis-counting-IRQ-vector-numbers-issue.patch
 	patches.suse/0001-xen-netback-fix-error-path-of-xenvif_connect_data.patch
 	patches.suse/net-dsa-fix-switch-tree-list.patch
 	patches.suse/x86-boot-64-Make-level2_kernel_pgt-pages-invalid-out.patch
