cpumap: Avoid warning when CONFIG_DEBUG_PER_CPU_MAPS is enabled (bsc#1109837).

--- a/series.conf
+++ b/series.conf
@@ -54884,6 +54884,7 @@
 	patches.suse/net-bcmgenet-correct-per-TX-RX-ring-statistics.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
 	patches.suse/macsec-avoid-to-set-wrong-mtu.patch
+	patches.suse/cpumap-Avoid-warning-when-CONFIG_DEBUG_PER_CPU_MAPS-.patch
 	patches.suse/bpf-Forbid-XADD-on-spilled-pointers-for-unprivileged.patch
 	patches.suse/powerpc-setup_64-Set-cache-line-size-based-on-cache-.patch
 	patches.suse/s390-ftrace-fix-potential-crashes-when-switching-tracers
