drivers: net: xgene: Fix the order of the arguments of 'alloc_etherdev_mqs()' (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53655,6 +53655,7 @@
 	patches.suse/0055-amd-xgbe-remove-unnecessary-conversion-to-bool.patch
 	patches.suse/msft-hv-2010-hv_netvsc-Add-XDP-support.patch
 	patches.suse/net_sched-ematch-reject-invalid-TCF_EM_SIMPLE.patch
+	patches.suse/drivers-net-xgene-Fix-the-order-of-the-arguments-of-.patch
 	patches.suse/Bluetooth-Fix-race-condition-in-hci_release_sock.patch
 	patches.suse/mwifiex-drop-most-magic-numbers-from-mwifiex_process.patch
 	patches.suse/brcmfmac-sdio-Fix-OOB-interrupt-initialization-on-br.patch
