--- a/series.conf
+++ b/series.conf
@@ -56987,6 +56987,7 @@
 	patches.suse/IB-mthca-fix-return-value-of-error-branch-in-mthca_i.patch
 	patches.suse/IB-hfi1-Ensure-correct-mm-is-used-at-all-times.patch
 	patches.suse/btrfs-qgroup-don-t-commit-transaction-when-we-alread.patch
+	patches.suse/bnxt_en-fix-error-return-code-in-bnxt_init_board.patch
 	patches.suse/net-tls-missing-received-data-after-fast-remote-clos.patch
 	patches.suse/tcp-Set-INET_ECN_xmit-configuration-in-tcp_reinit_co.patch
 	patches.suse/s390-qeth-make-af_iucv-tx-notification-call-more-robust
