--- a/series.conf
+++ b/series.conf
@@ -54028,6 +54028,7 @@
 	patches.suse/RDMA-iw_cxgb4-initiate-CLOSE-when-entering-TERM.patch
 	patches.suse/IB-umad-Fix-kernel-crash-while-unloading-ib_umad.patch
 	patches.suse/RDMA-rxe-Fix-soft-lockup-problem-due-to-using-taskle.patch
+	patches.suse/RDMA-core-Fix-protection-fault-in-get_pkey_idx_qp_li.patch
 	patches.suse/Input-synaptics-switch-T470s-to-RMI4-by-default.patch
 	patches.suse/Input-synaptics-enable-SMBus-on-ThinkPad-L470.patch
 	patches.suse/Input-synaptics-remove-the-LEN0049-dmi-id-from-topbu.patch
