--- a/series.conf
+++ b/series.conf
@@ -54474,6 +54474,7 @@
 	patches.suse/net-ena-remove-set-but-not-used-variable-hash_key.patch
 	patches.suse/net-ena-ethtool-remove-redundant-non-zero-check-on-r.patch
 	patches.suse/0056-net-amd-Remove-useless-driver-version.patch
+	patches.suse/virtio_net-Keep-vnet-header-zeroed-if-XDP-is-loaded-.patch
 	patches.suse/hsr-use-netdev_err-instead-of-WARN_ONCE.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
 	patches.suse/net-ethtool-Introduce-link_ksettings-API-for-virtual.patch
