--- a/series.conf
+++ b/series.conf
@@ -55744,6 +55744,7 @@
 	patches.suse/net-sysfs-add-a-newline-when-printing-tx_timeout-by-.patch
 	patches.suse/0011-net-udp-Fix-wrong-clean-up-for-IS_UDPLITE-macro.patch
 	patches.suse/net-hns3-fix-for-not-calculating-TX-BD-send-size-cor.patch
+	patches.suse/net-hns3-fix-error-handling-for-desc-filling-8ceca59f.patch
 	patches.suse/qed-suppress-don-t-support-RoCE-iWARP-flooding-on-HW.patch
 	patches.suse/qed-suppress-false-positives-interrupt-error-message.patch
 	patches.suse/drivers-net-wan-x25_asy-Fix-to-make-it-work.patch
