--- a/series.conf
+++ b/series.conf
@@ -54328,6 +54328,7 @@
 	patches.suse/macsec-restrict-to-ethernet-devices.patch
 	patches.suse/bnxt_en-fix-memory-leaks-in-bnxt_dcbnl_ieee_getets.patch
 	patches.suse/bnxt_en-Return-error-if-bnxt_alloc_ctx_mem-fails.patch
+	patches.suse/bnxt_en-Reset-rings-if-ring-reservation-fails-during.patch
 	patches.suse/net-dsa-Fix-duplicate-frames-flooded-by-learning.patch
 	patches.suse/net-ena-add-pci-shutdown-handler-to-allow-safe-kexec.patch
 	patches.suse/RDMA-mlx5-Fix-access-to-wrong-pointer-while-performi.patch
