--- a/series.conf
+++ b/series.conf
@@ -55800,6 +55800,7 @@
 	patches.suse/mac80211-mesh-Free-pending-skb-when-destroying-a-mpa.patch
 	patches.suse/cfg80211-check-vendor-command-doit-pointer-before-us.patch
 	patches.suse/0007-rds-Prevent-kernel-infoleak-in-rds_notify_queue_get.patch
+	patches.suse/net-mlx5e-fix-bpf_prog-reference-count-leaks-in-mlx5.patch
 	patches.suse/0006-af_key-pfkey_dump-needs-parameter-validation.patch
 	patches.suse/bpf-Fix-map-leak-in-HASH_OF_MAPS-map.patch
 	patches.suse/kvm-svm-fix-disable-pause-loop-exit-pause-filtering-capability-on-svm
