--- a/series.conf
+++ b/series.conf
@@ -55488,6 +55488,7 @@
 	patches.suse/i2c-pxa-clear-all-master-action-bits-in-i2c_pxa_stop.patch
 	patches.suse/scsi-ibmvscsi-Don-t-send-host-info-in-adapter-info-M.patch
 	patches.suse/ibmvnic-Flush-existing-work-items-before-device-remo.patch
+	patches.suse/net-filter-Permit-reading-NET-in-load_bytes_relative.patch
 	patches.suse/ext4-fix-partial-cluster-initialization-when-splitti.patch
 	patches.suse/ext4-jbd2-ensure-panic-by-fix-a-race-between-jbd2-ab.patch
 	patches.suse/ibmvnic-Harden-device-login-requests.patch
