RDMA/qedr: Fix inline size returned for iWARP (bsc#1050545 FATE#322893).

--- a/series.conf
+++ b/series.conf
@@ -56758,6 +56758,7 @@
 	patches.suse/RDMA-ucma-Add-missing-locking-around-rdma_leave_mult.patch
 	patches.suse/RDMA-qedr-Fix-doorbell-setting.patch
 	patches.suse/RDMA-qedr-Fix-use-of-uninitialized-field.patch
+	patches.suse/RDMA-qedr-Fix-inline-size-returned-for-iWARP.patch
 	patches.suse/RDMA-hns-Set-the-unsupported-wr-opcode.patch
 	patches.suse/RDMA-hns-Correct-typo-of-hns_roce_create_cq.patch
 	patches.suse/RDMA-qedr-Endianness-warnings-cleanup.patch
