qed: Fix race condition between scheduling and destroying the slowpath workqueue (bsc#1086314 FATE#324886 bsc#1086313 FATE#324885 bsc#1086301 FATE#3248881).

--- a/series.conf
+++ b/series.conf
@@ -54490,6 +54490,7 @@
 	patches.suse/mwifiex-set-needed_headroom-not-hard_header_len.patch
 	patches.suse/ath10k-use-kzalloc-to-read-for-ath10k_sdio_hif_diag_.patch
 	patches.suse/ath9k-Handle-txpower-changes-even-when-TPC-is-disabl.patch
+	patches.suse/qed-Fix-race-condition-between-scheduling-and-destro.patch
 	patches.suse/s390-qeth-support-net-namespaces-for-l3-devices
 	patches.suse/Crypto-chelsio-Fixes-a-hang-issue-during-driver-regi.patch
 	patches.suse/Crypto-chelsio-Fixes-a-deadlock-between-rtnl_lock-an.patch
