bnxt_en: fix HWRM error when querying VF temperature (bsc#1104745 FATE#325918).

--- a/series.conf
+++ b/series.conf
@@ -56314,6 +56314,7 @@
 	patches.suse/ibmvnic-fix-NULL-tx_pools-and-rx_tools-issue-at-do_r.patch
 	patches.suse/bnxt_en-Don-t-query-FW-when-netif_running-is-false.patch
 	patches.suse/bnxt_en-Check-for-zero-dir-entries-in-NVRAM.patch
+	patches.suse/bnxt_en-fix-HWRM-error-when-querying-VF-temperature.patch
 	patches.suse/net-disable-netpoll-on-fresh-napis.patch
 	patches.suse/bnxt-don-t-enable-NAPI-until-rings-are-ready.patch
 	patches.suse/cfg80211-regulatory-reject-invalid-hints.patch
