net/mlx5e: Fix memleak in mlx5e_create_l2_table_groups (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57314,6 +57314,7 @@
 	patches.suse/misdn-dsp-select-CONFIG_BITREVERSE.patch
 	patches.suse/wan-ds26522-select-CONFIG_BITREVERSE.patch
 	patches.suse/net-vlan-avoid-leaks-on-register_vlan_dev-failures.patch
+	patches.suse/net-mlx5e-Fix-memleak-in-mlx5e_create_l2_table_group.patch
 	patches.suse/0002-drm-msm-Fix-WARN_ON-splat-in-_free_object.patch
 	patches.suse/ACPI-scan-add-stub-acpi_create_platform_device-for-C.patch
 	patches.suse/Revert-device-property-Keep-secondary-firmware-node-.patch
