net: hns3: fix error VF index when setting VLAN offload (bsc#1104353 FATE#326415).

--- a/series.conf
+++ b/series.conf
@@ -51542,6 +51542,7 @@
 	patches.suse/0004-cirrus-cs89x0-remove-set-but-not-used-variable-lp.patch
 	patches.suse/IB-mlx5-Support-MLX5_CMD_OP_QUERY_LAG-as-a-DEVX-gene.patch
 	patches.suse/net-mlx5e-ethtool-Fix-a-typo-in-WOL-function-names.patch
+	patches.suse/net-hns3-fix-error-VF-index-when-setting-VLAN-offloa.patch
 	patches.suse/tools-bpftool-fix-arguments-for-p_err-in-do_event_pi.patch
 	patches.suse/xsk-avoid-store-tearing-when-assigning-queues.patch
 	patches.suse/xsk-avoid-store-tearing-when-assigning-umem.patch
