nfp: validate the return code from dev_queue_xmit() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -47982,6 +47982,7 @@
 	patches.suse/fm10k-Fix-a-potential-NULL-pointer-dereference.patch
 	patches.suse/qmi_wwan-add-Olicard-600.patch
 	patches.suse/netns-provide-pure-entropy-for-net_hash_mix.patch
+	patches.suse/nfp-validate-the-return-code-from-dev_queue_xmit.patch
 	patches.suse/nfp-disable-netpoll-on-representors.patch
 	patches.suse/openvswitch-fix-flow-actions-reallocation.patch
 	patches.suse/net-rds-force-to-destroy-connection-if-t_sock-is-NUL.patch
