--- a/series.conf
+++ b/series.conf
@@ -56988,6 +56988,7 @@
 	patches.suse/IB-hfi1-Ensure-correct-mm-is-used-at-all-times.patch
 	patches.suse/btrfs-qgroup-don-t-commit-transaction-when-we-alread.patch
 	patches.suse/bnxt_en-fix-error-return-code-in-bnxt_init_board.patch
+	patches.suse/bnxt_en-Release-PCI-regions-when-DMA-mask-setup-fail.patch
 	patches.suse/net-tls-missing-received-data-after-fast-remote-clos.patch
 	patches.suse/tcp-Set-INET_ECN_xmit-configuration-in-tcp_reinit_co.patch
 	patches.suse/s390-qeth-make-af_iucv-tx-notification-call-more-robust
