vhost/vsock: fix vhost vsock cid hashing inconsistent (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45972,6 +45972,7 @@
 	patches.suse/bpf-fix-panic-in-stack_map_get_build_id-on-i386-and-.patch
 	patches.suse/bpf-fix-bpffs-bitfield-pretty-print.patch
 	patches.suse/net-stmmac-Fix-PCI-module-removal-leak.patch
+	patches.suse/vhost-vsock-fix-vhost-vsock-cid-hashing-inconsistent.patch
 	patches.suse/isdn-i4l-isdn_tty-Fix-some-concurrency-double-free-b.patch
 	patches.suse/bnxt_en-Fix-ring-checking-logic-on-57500-chips.patch
 	patches.suse/bnxt_en-Fix-context-memory-allocation.patch
