--- a/series.conf
+++ b/series.conf
@@ -56840,6 +56840,7 @@
 	patches.suse/x86-unwind-orc-fix-inactive-tasks-with-stack-pointer-in-sp-on-gcc-10-compiled-kernels.patch
 	patches.suse/RDMA-qedr-Fix-memory-leak-in-iWARP-CM.patch
 	patches.suse/mlxsw-core-Fix-memory-leak-on-module-removal.patch
+	patches.suse/mlxsw-core-Fix-use-after-free-in-mlxsw_emad_trans_fi.patch
 	patches.suse/ibmveth-Fix-use-of-ibmveth-in-a-bridge.patch
 	patches.suse/tipc-fix-memory-leak-caused-by-tipc_buf_append.patch
 	patches.suse/ibmvnic-fix-ibmvnic_set_mac.patch
