--- a/series.conf
+++ b/series.conf
@@ -56318,6 +56318,7 @@
 	patches.suse/net-disable-netpoll-on-fresh-napis.patch
 	patches.suse/bnxt-don-t-enable-NAPI-until-rings-are-ready.patch
 	patches.suse/cfg80211-regulatory-reject-invalid-hints.patch
+	patches.suse/cxgb4-fix-thermal-zone-device-registration.patch
 	patches.suse/net-ethernet-mlx4-Fix-memory-allocation-in-mlx4_budd.patch
 	patches.suse/net-usb-dm9601-Add-USB-ID-of-Keenetic-Plus-DSL.patch
 	patches.suse/tipc-fix-shutdown-of-connectionless-socket.patch
