mlxsw: spectrum: Fix use-after-free of split/unsplit/type_set in case reload fails (bsc#1112374).

--- a/series.conf
+++ b/series.conf
@@ -55094,6 +55094,7 @@
 	patches.suse/net-qrtr-Fix-passing-invalid-reference-to-qrtr_local.patch
 	patches.suse/net-ipip-fix-wrong-address-family-in-init-error-path.patch
 	patches.suse/sctp-Start-shutdown-on-association-restart-if-in-SHU.patch
+	patches.suse/mlxsw-spectrum-Fix-use-after-free-of-split-unsplit-t.patch
 	patches.suse/net-mlx4_core-fix-a-memory-leak-bug.patch
 	patches.suse/net-mlx5-Add-command-entry-handling-completion.patch
 	patches.suse/net-mlx5e-Update-netdev-txq-on-completions-during-cl.patch
