net: hns3: clear reset interrupt status in hclge_irq_handle() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51522,6 +51522,7 @@
 	patches.suse/net-mlx5e-Print-a-warning-when-LRO-feature-is-droppe.patch
 	patches.suse/net-hns3-do-not-query-unsupported-commands-in-debugf.patch
 	patches.suse/net-hns3-fix-some-reset-handshake-issue.patch
+	patches.suse/net-hns3-clear-reset-interrupt-status-in-hclge_irq_h.patch
 	patches.suse/cxgb4-smt-Add-lock-for-atomic_dec_and_test.patch
 	patches.suse/net-hns3-fix-GFP-flag-error-in-hclge_mac_update_stat.patch
 	patches.suse/0052-xgbe-no-need-to-check-return-value-of-debugfs_create.patch
