--- a/series.conf
+++ b/series.conf
@@ -55647,6 +55647,7 @@
 	patches.suse/tcp-md5-refine-tcp_md5_do_add-tcp_md5_hash_key-barri.patch
 	patches.suse/tcp-md5-do-not-send-silly-options-in-SYNCOOKIES.patch
 	patches.suse/sched-consistently-handle-layer3-header-accesses-in-.patch
+	patches.suse/net-hns3-add-a-missing-uninit-debugfs-when-unload-dr.patch
 	patches.suse/net-usb-qmi_wwan-add-support-for-Quectel-EG95-LTE-mo.patch
 	patches.suse/cgroup-fix-cgroup_sk_alloc-for-sk_clone_lock.patch
 	patches.suse/ipv4-fill-fl4_icmp_-type-code-in-ping_v4_sendmsg.patch
