--- a/series.conf
+++ b/series.conf
@@ -56470,6 +56470,7 @@
 	patches.suse/xen-events-don-t-use-chip_data-for-legacy-IRQs.patch
 	patches.suse/vmxnet3-fix-cksum-offload-issues-for-non-udp-tunnels.patch
 	patches.suse/bonding-set-dev-needed_headroom-in-bond_setup_by_sla.patch
+	patches.suse/team-set-dev-needed_headroom-in-team_setup_by_port.patch
 	patches.suse/0002-net-introduce-helper-sendpage_ok-in-include-linux-ne.patch
 	patches.suse/0003-net-add-WARN_ONCE-in-kernel_sendpage-for-improper-ze.patch
 	patches.suse/0004-nvme-tcp-check-page-by-sendpage_ok-before-calling-ke.patch
