net/mlx5e: Fix VLAN create flow (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56478,6 +56478,7 @@
 	patches.suse/0007-scsi-libiscsi-use-sendpage_ok-in-iscsi_tcp_segment_m.patch
 	patches.suse/0008-libceph-use-sendpage_ok-in-ceph_tcp_sendpage.patch
 	patches.suse/net-mlx5e-Fix-VLAN-cleanup-flow.patch
+	patches.suse/net-mlx5e-Fix-VLAN-create-flow.patch
 	patches.suse/platform-x86-thinkpad_acpi-initialize-tp_nvram_state.patch
 	patches.suse/platform-x86-fix-kconfig-dependency-warning-for-FUJI.patch
 	patches.suse/platform-x86-thinkpad_acpi-re-initialize-ACPI-buffer.patch
