net: hns3: check reset interrupt status when reset fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51540,6 +51540,7 @@
 	patches.suse/0003-cirrus-cs89x0-use-devm_platform_ioremap_resource-to-.patch
 	patches.suse/i40e-reduce-stack-usage-in-i40e_set_fc.patch
 	patches.suse/0004-cirrus-cs89x0-remove-set-but-not-used-variable-lp.patch
+	patches.suse/net-hns3-check-reset-interrupt-status-when-reset-fai.patch
 	patches.suse/IB-mlx5-Support-MLX5_CMD_OP_QUERY_LAG-as-a-DEVX-gene.patch
 	patches.suse/net-mlx5e-ethtool-Fix-a-typo-in-WOL-function-names.patch
 	patches.suse/net-hns3-fix-error-VF-index-when-setting-VLAN-offloa.patch
