net: hns3: add compatible handling for command HCLGE_OPC_PF_RST_DONE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52412,6 +52412,7 @@
 	patches.suse/0008-net-bcmgenet-reapply-manual-settings-to-the-PHY.patch
 	patches.suse/net-smc-fix-ethernet-interface-refcounting
 	patches.suse/net-mlx5e-Fix-eswitch-debug-print-of-max-fdb-flow.patch
+	patches.suse/net-hns3-add-compatible-handling-for-command-HCLGE_O.patch
 	patches.suse/NFC-st21nfca-fix-double-free.patch
 	patches.suse/nfc-netlink-fix-double-device-reference-drop.patch
 	patches.suse/CDC-NCM-handle-incomplete-transfer-of-MTU.patch
