--- a/series.conf
+++ b/series.conf
@@ -55343,6 +55343,7 @@
 	patches.suse/RDMA-mlx5-Add-init2init-as-a-modify-command.patch
 	patches.suse/RDMA-efa-Fix-setting-of-wrong-bit-in-get-set_feature.patch
 	patches.suse/IB-cma-Fix-ports-memory-leak-in-cma_configfs.patch
+	patches.suse/IB-mlx5-Fix-DEVX-support-for-MLX5_CMD_OP_INIT2INIT_Q.patch
 	patches.suse/scsi-qla2xxx-Split-qla2x00_configure_local_loop.patch
 	patches.suse/scsi-qla2xxx-Use-ARRAY_SIZE-instead-of-open-coding-i.patch
 	patches.suse/scsi-lpfc-remove-duplicate-unloading-checks.patch
