--- a/series.conf
+++ b/series.conf
@@ -55663,6 +55663,7 @@
 	patches.suse/net-smc-switch-smcd_dev_list-spinlock-to-mutex
 	patches.suse/net-smc-tolerate-future-smcd-versions
 	patches.suse/l2tp-remove-skb_dst_set-from-l2tp_xmit_skb.patch
+	patches.suse/cxgb4-fix-all-mask-IP-address-comparison.patch
 	patches.suse/net_sched-fix-a-memory-leak-in-atm_tc_init.patch
 	patches.suse/tcp-make-sure-listeners-don-t-initialize-congestion-.patch
 	patches.suse/cgroup-fix-sock_cgroup_data-on-big-endian.patch
