--- a/series.conf
+++ b/series.conf
@@ -54336,6 +54336,7 @@
 	patches.suse/net-dsa-Fix-duplicate-frames-flooded-by-learning.patch
 	patches.suse/net-cbs-Fix-software-cbs-to-consider-packet-sending-.patch
 	patches.suse/net-ena-add-pci-shutdown-handler-to-allow-safe-kexec.patch
+	patches.suse/RDMA-core-Ensure-security-pkey-modify-is-not-lost.patch
 	patches.suse/RDMA-mlx5-Fix-access-to-wrong-pointer-while-performi.patch
 	patches.suse/0001-ceph-check-pool_flag_full-nearfull-in-addition-to-osdmap_full-nearfull.patch
 	patches.suse/0002-libceph-fix-alloc_msg_with_page_vector-memory-leaks.patch
