RDMA/core: Fix use of logical OR in get_new_pps (bsc#1046306 FATE#322942).

--- a/series.conf
+++ b/series.conf
@@ -54191,6 +54191,7 @@
 	patches.suse/0001-Revert-bcache-ignore-pending-signals-when-creating-g.patch
 	patches.suse/blktrace-fix-dereference-after-null-check.patch
 	patches.suse/Revert-RDMA-cma-Simplify-rdma_resolve_addr-error-flo.patch
+	patches.suse/RDMA-core-Fix-use-of-logical-OR-in-get_new_pps.patch
 	patches.suse/RMDA-cm-Fix-missing-ib_cm_destroy_id-in-ib_cm_insert.patch
 	patches.suse/IB-hfi1-qib-Ensure-RCU-is-locked-when-accessing-list.patch
 	patches.suse/RDMA-core-Fix-protection-fault-in-ib_mr_pool_destroy.patch
