--- a/series.conf
+++ b/series.conf
@@ -54193,6 +54193,7 @@
 	patches.suse/Revert-RDMA-cma-Simplify-rdma_resolve_addr-error-flo.patch
 	patches.suse/RDMA-core-Fix-use-of-logical-OR-in-get_new_pps.patch
 	patches.suse/RMDA-cm-Fix-missing-ib_cm_destroy_id-in-ib_cm_insert.patch
+	patches.suse/RDMA-core-Fix-pkey-and-port-assignment-in-get_new_pp.patch
 	patches.suse/IB-hfi1-qib-Ensure-RCU-is-locked-when-accessing-list.patch
 	patches.suse/RDMA-core-Fix-protection-fault-in-ib_mr_pool_destroy.patch
 	patches.suse/RDMA-iwcm-Fix-iwcm-work-deallocation.patch
