--- a/series.conf
+++ b/series.conf
@@ -52523,6 +52523,7 @@
 	patches.suse/net-sched-ensure-opts_len-IP_TUNNEL_OPTS_MAX-in-act_.patch
 	patches.suse/net-mlx4_en-Fix-wrong-limitation-for-number-of-TX-ri.patch
 	patches.suse/net-sched-act_pedit-fix-WARN-in-the-traffic-path.patch
+	patches.suse/net-hns3-fix-a-wrong-reset-interrupt-status-mask.patch
 	patches.suse/s390-qeth-fix-potential-deadlock-on-workqueue-flush
 	patches.suse/s390-qeth-return-proper-errno-on-io-error
 	patches.suse/net-ibmvnic-Ignore-H_FUNCTION-return-from-H_EOI-to-t.patch
