nfsd4: readdirplus shouldn't return parent of export (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57268,6 +57268,7 @@
 	patches.suse/r8152-Add-Lenovo-Powered-USB-C-Travel-Hub.patch
 	patches.suse/ACPI-scan-Harden-acpi_device_add-against-device-ID-o.patch
 	patches.suse/spi-cadence-cache-reference-clock-rate-during-probe.patch
+	patches.suse/nfsd4-readdirplus-shouldn-t-return-parent-of-export.patch
 	patches.suse/ACPI-scan-Make-acpi_bus_get_device-clear-return-poin.patch
 	patches.suse/drm-atomic-put-state-on-error-path.patch
 	patches.suse/mmc-sdhci-xenon-fix-1.8v-regulator-stabilization.patch
