blacklist.conf: add NFS patches which hurt kabi

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1742,3 +1742,6 @@ f51778db088b2407ec177f2f4da0f6290602aa3f # Compile fix only
 0107973a80adad5b73232d3fbcd26f710ab1f851 # breaks kABI, needed for SEV which is not supported in 15SP1
 a268e0f2455c32653140775662b40c2b1f1b2efa # fixes only CONFIG_PROC_FS=n
 c8d647a326f06a39a8e5f0f1af946eacfa1835f8 # driver is not in 4.12
+412055398b9e67e07347a936fc4a6adddabe9cf4 # minor bug, major kabi breakage
+d5aa6b22e2258f05317313ecc02efbb988ed6d38 # minor bug, major kabi breakage
+078000d02d57f02dde61de4901f289672e98c8bc # multiple complex dependencies, minor bug
