--- a/series.conf
+++ b/series.conf
@@ -57084,6 +57084,7 @@
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
 	patches.suse/net-mlx4_en-Avoid-scheduling-restart-task-if-it-is-a.patch
+	patches.suse/i40e-avoid-premature-Rx-buffer-reuse.patch
 	patches.suse/gpio-mvebu-fix-potential-user-after-free-on-probe.patch
 	patches.suse/pinctrl-merrifield-Set-default-bias-in-case-no-parti.patch
 	patches.suse/pinctrl-baytrail-Avoid-clearing-debounce-value-when-.patch
