RDMA/hns: Fix missing sq_sig_type when querying QP (bsc#1104427 FATE#326416).

--- a/series.conf
+++ b/series.conf
@@ -56770,6 +56770,7 @@
 	patches.suse/RDMA-qedr-Fix-inline-size-returned-for-iWARP.patch
 	patches.suse/RDMA-hns-Set-the-unsupported-wr-opcode.patch
 	patches.suse/RDMA-hns-Correct-typo-of-hns_roce_create_cq.patch
+	patches.suse/RDMA-hns-Fix-missing-sq_sig_type-when-querying-QP.patch
 	patches.suse/RDMA-qedr-Endianness-warnings-cleanup.patch
 	patches.suse/RDMA-ipoib-Set-rtnl_link_ops-for-ipoib-interfaces.patch
 	patches.suse/RDMA-bnxt_re-Fix-sizeof-mismatch-for-allocation-of-p.patch
