--- a/series.conf
+++ b/series.conf
@@ -57291,6 +57291,7 @@
 	patches.suse/scsi-qla2xxx-If-fcport-is-undergoing-deletion-comple.patch
 	patches.suse/scsi-qla2xxx-Fix-device-loss-on-4G-and-older-HBAs.patch
 	patches.suse/scsi-qla2xxx-Update-version-to-10.02.00.104-k.patch
+	patches.suse/RDMA-cma-Don-t-overwrite-sgid_attr-after-device-is-r.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/vfio-pci-use-io_remap_pfn_range-for-pci-io-memory
