--- a/series.conf
+++ b/series.conf
@@ -57339,6 +57339,7 @@
 	patches.suse/net-mvpp2-Fix-GoP-port-3-Networking-Complex-Control-.patch
 	patches.suse/ibmvnic-continue-fatal-error-reset-after-passive-ini.patch
 	patches.suse/tun-fix-return-value-when-the-number-of-iovs-exceeds.patch
+	patches.suse/net-mvpp2-fix-pkt-coalescing-int-threshold-configura.patch
 	patches.suse/ibmvnic-fix-NULL-pointer-dereference.patch
 	patches.suse/ALSA-hda-via-Fix-runtime-PM-for-Clevo-W35xSS.patch
 	patches.suse/btrfs-qgroup-don-t-try-to-wait-flushing-if-we-re-alr.patch
