bnxt_en: Improve stats context resource accounting with RDMA driver loaded (bsc#1104745 FATE#325918).

--- a/series.conf
+++ b/series.conf
@@ -57382,6 +57382,7 @@
 	patches.suse/ALSA-fireface-Fix-integer-overflow-in-transmit_midi_.patch
 	patches.suse/ALSA-firewire-tascam-Fix-integer-overflow-in-midi_po.patch
 	patches.suse/r8152-Add-Lenovo-Powered-USB-C-Travel-Hub.patch
+	patches.suse/bnxt_en-Improve-stats-context-resource-accounting-wi.patch
 	patches.suse/ACPI-scan-Harden-acpi_device_add-against-device-ID-o.patch
 	patches.suse/spi-cadence-cache-reference-clock-rate-during-probe.patch
 	patches.suse/nfsd4-readdirplus-shouldn-t-return-parent-of-export.patch
