chelsio/chtls: correct netdevice for vlan interface (bsc#1104270 FATE#325931).

--- a/series.conf
+++ b/series.conf
@@ -56821,6 +56821,7 @@
 	patches.suse/icmp-randomize-the-global-rate-limiter.patch
 	patches.suse/nfc-Ensure-presence-of-NFC_ATTR_FIRMWARE_NAME-attrib.patch
 	patches.suse/chelsio-chtls-fix-socket-lock.patch
+	patches.suse/chelsio-chtls-correct-netdevice-for-vlan-interface.patch
 	patches.suse/ibmvnic-save-changed-mac-address-to-adapter-mac_addr.patch
 	patches.suse/drm-ttm-fix-eviction-valuable-range-check.patch
 	patches.suse/drm-i915-Force-VT-d-workarounds-when-running-as-a-gu.patch
