--- a/series.conf
+++ b/series.conf
@@ -57336,6 +57336,7 @@
 	patches.suse/s390-dasd-fix-list-corruption-of-lcu-list
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 	patches.suse/ethernet-ucc_geth-fix-use-after-free-in-ucc_geth_rem.patch
+	patches.suse/net-mvpp2-Fix-GoP-port-3-Networking-Complex-Control-.patch
 	patches.suse/ibmvnic-continue-fatal-error-reset-after-passive-ini.patch
 	patches.suse/ibmvnic-fix-NULL-pointer-dereference.patch
 	patches.suse/ALSA-hda-via-Fix-runtime-PM-for-Clevo-W35xSS.patch
