net/sched: act_tunnel_key: fix OOB write in case of IPv6 ERSPAN tunnels (bsc#1109837).

--- a/series.conf
+++ b/series.conf
@@ -56823,6 +56823,7 @@
 	patches.suse/chelsio-chtls-fix-socket-lock.patch
 	patches.suse/chelsio-chtls-correct-netdevice-for-vlan-interface.patch
 	patches.suse/chelsio-chtls-correct-function-return-and-return-typ.patch
+	patches.suse/net-sched-act_tunnel_key-fix-OOB-write-in-case-of-IP.patch
 	patches.suse/ibmvnic-save-changed-mac-address-to-adapter-mac_addr.patch
 	patches.suse/drm-ttm-fix-eviction-valuable-range-check.patch
 	patches.suse/drm-i915-Force-VT-d-workarounds-when-running-as-a-gu.patch
