bnxt_en: fix error return code in bnxt_init_one() (bsc#1050242 FATE#322914).

--- a/series.conf
+++ b/series.conf
@@ -57010,6 +57010,7 @@
 	patches.suse/IB-hfi1-Ensure-correct-mm-is-used-at-all-times.patch
 	patches.suse/RDMA-hns-Bugfix-for-memory-window-mtpt-configuration.patch
 	patches.suse/btrfs-qgroup-don-t-commit-transaction-when-we-alread.patch
+	patches.suse/bnxt_en-fix-error-return-code-in-bnxt_init_one.patch
 	patches.suse/bnxt_en-fix-error-return-code-in-bnxt_init_board.patch
 	patches.suse/bnxt_en-Release-PCI-regions-when-DMA-mask-setup-fail.patch
 	patches.suse/net-tls-missing-received-data-after-fast-remote-clos.patch
