RDMA/hns: Bugfix for memory window mtpt configuration (bsc#1104427 FATE#326416).

--- a/series.conf
+++ b/series.conf
@@ -57008,6 +57008,7 @@
 	patches.suse/platform-x86-toshiba_acpi-Fix-the-wrong-variable-ass.patch
 	patches.suse/IB-mthca-fix-return-value-of-error-branch-in-mthca_i.patch
 	patches.suse/IB-hfi1-Ensure-correct-mm-is-used-at-all-times.patch
+	patches.suse/RDMA-hns-Bugfix-for-memory-window-mtpt-configuration.patch
 	patches.suse/btrfs-qgroup-don-t-commit-transaction-when-we-alread.patch
 	patches.suse/bnxt_en-fix-error-return-code-in-bnxt_init_board.patch
 	patches.suse/bnxt_en-Release-PCI-regions-when-DMA-mask-setup-fail.patch
