ixgbe: avoid premature Rx buffer reuse (bsc#1109837 FATE#326322).

--- a/series.conf
+++ b/series.conf
@@ -57085,6 +57085,7 @@
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
 	patches.suse/net-mlx4_en-Avoid-scheduling-restart-task-if-it-is-a.patch
 	patches.suse/i40e-avoid-premature-Rx-buffer-reuse.patch
+	patches.suse/ixgbe-avoid-premature-Rx-buffer-reuse.patch
 	patches.suse/gpio-mvebu-fix-potential-user-after-free-on-probe.patch
 	patches.suse/pinctrl-merrifield-Set-default-bias-in-case-no-parti.patch
 	patches.suse/pinctrl-baytrail-Avoid-clearing-debounce-value-when-.patch
