net/mlx5: Add handling of port type in rule deletion (bsc#1103991 FATE#326007).

--- a/series.conf
+++ b/series.conf
@@ -56978,6 +56978,7 @@
 	patches.suse/qed-fix-error-return-code-in-qed_iwarp_ll2_start.patch
 	patches.suse/inet_diag-Fix-error-path-to-cancel-the-meseage-in-in.patch
 	patches.suse/page_frag-Recover-from-memory-pressure.patch
+	patches.suse/net-mlx5-Add-handling-of-port-type-in-rule-deletion.patch
 	patches.suse/net-mlx4_core-Fix-init_hca-fields-offset.patch
 	patches.suse/drm-sun4i-dw-hdmi-fix-error-return-code-in-sun8i_dw_.patch
 	patches.suse/drm-i915-gvt-Set-ENHANCED_FRAME_CAP-bit.patch
