chtls: Fix chtls resources release sequence (bsc#1104270 FATE#325931).

--- a/series.conf
+++ b/series.conf
@@ -57352,6 +57352,7 @@
 	patches.suse/chtls-Remove-invalid-set_tcb-call.patch
 	patches.suse/chtls-Replace-skb_dequeue-with-skb_peek.patch
 	patches.suse/chtls-Added-a-check-to-avoid-NULL-pointer-dereferenc.patch
+	patches.suse/chtls-Fix-chtls-resources-release-sequence.patch
 	patches.suse/net-mlx5e-Fix-memleak-in-mlx5e_create_l2_table_group.patch
 	patches.suse/0002-drm-msm-Fix-WARN_ON-splat-in-_free_object.patch
 	patches.suse/ACPI-scan-add-stub-acpi_create_platform_device-for-C.patch
