chelsio/chtls: fix panic during unload reload chtls (bsc#1104270 FATE#325931).

--- a/series.conf
+++ b/series.conf
@@ -57052,6 +57052,7 @@
 	patches.suse/ibmvnic-avoid-memset-null-scrq-msgs.patch
 	patches.suse/ibmvnic-restore-adapter-state-on-failed-reset.patch
 	patches.suse/ibmvnic-delay-next-reset-if-hard-reset-fails.patch
+	patches.suse/chelsio-chtls-fix-panic-during-unload-reload-chtls.patch
 	patches.suse/inet_ecn-Fix-endianness-of-checksum-update-when-sett.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
 	patches.suse/cxgb3-fix-error-return-code-in-t3_sge_alloc_qset.patch
