net: mvpp2: Fix error return code in mvpp2_open() (bsc#1119113 FATE#326472).

--- a/series.conf
+++ b/series.conf
@@ -57057,6 +57057,7 @@
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
 	patches.suse/cxgb3-fix-error-return-code-in-t3_sge_alloc_qset.patch
 	patches.suse/chelsio-chtls-fix-a-double-free-in-chtls_setkey.patch
+	patches.suse/net-mvpp2-Fix-error-return-code-in-mvpp2_open.patch
 	patches.suse/drm-rockchip-Avoid-uninitialized-use-of-endpoint-id-.patch
 	patches.suse/msft-hv-2173-scsi-storvsc-Fix-error-return-in-storvsc_probe.patch
 	patches.suse/powerpc-64s-Fix-hash-ISA-v3.0-TLBIEL-instruction-gen.patch
