RDMA/addr: Fix race with netevent_callback()/rdma_addr_cancel() (bsc#1103992 FATE#326009).

--- a/series.conf
+++ b/series.conf
@@ -56771,6 +56771,7 @@
 	patches.suse/RDMA-hns-Set-the-unsupported-wr-opcode.patch
 	patches.suse/RDMA-hns-Correct-typo-of-hns_roce_create_cq.patch
 	patches.suse/RDMA-hns-Fix-missing-sq_sig_type-when-querying-QP.patch
+	patches.suse/RDMA-addr-Fix-race-with-netevent_callback-rdma_addr_.patch
 	patches.suse/RDMA-qedr-Endianness-warnings-cleanup.patch
 	patches.suse/RDMA-ipoib-Set-rtnl_link_ops-for-ipoib-interfaces.patch
 	patches.suse/RDMA-bnxt_re-Fix-sizeof-mismatch-for-allocation-of-p.patch
