chelsio/chtls: fix deadlock issue (bsc#1104270 FATE#325931).

--- a/series.conf
+++ b/series.conf
@@ -56858,6 +56858,7 @@
 	patches.suse/cxgb4-set-up-filter-action-after-rewrites.patch
 	patches.suse/mlxsw-core-Fix-memory-leak-on-module-removal.patch
 	patches.suse/mlxsw-core-Fix-use-after-free-in-mlxsw_emad_trans_fi.patch
+	patches.suse/chelsio-chtls-fix-deadlock-issue.patch
 	patches.suse/ibmveth-Fix-use-of-ibmveth-in-a-bridge.patch
 	patches.suse/tipc-fix-memory-leak-caused-by-tipc_buf_append.patch
 	patches.suse/ibmvnic-fix-ibmvnic_set_mac.patch
