--- a/series.conf
+++ b/series.conf
@@ -56820,6 +56820,7 @@
 	patches.suse/cifs-remove-bogus-debug-code.patch
 	patches.suse/icmp-randomize-the-global-rate-limiter.patch
 	patches.suse/nfc-Ensure-presence-of-NFC_ATTR_FIRMWARE_NAME-attrib.patch
+	patches.suse/chelsio-chtls-fix-socket-lock.patch
 	patches.suse/ibmvnic-save-changed-mac-address-to-adapter-mac_addr.patch
 	patches.suse/drm-ttm-fix-eviction-valuable-range-check.patch
 	patches.suse/drm-i915-Force-VT-d-workarounds-when-running-as-a-gu.patch
