--- a/series.conf
+++ b/series.conf
@@ -56822,6 +56822,7 @@
 	patches.suse/nfc-Ensure-presence-of-NFC_ATTR_FIRMWARE_NAME-attrib.patch
 	patches.suse/chelsio-chtls-fix-socket-lock.patch
 	patches.suse/chelsio-chtls-correct-netdevice-for-vlan-interface.patch
+	patches.suse/chelsio-chtls-correct-function-return-and-return-typ.patch
 	patches.suse/ibmvnic-save-changed-mac-address-to-adapter-mac_addr.patch
 	patches.suse/drm-ttm-fix-eviction-valuable-range-check.patch
 	patches.suse/drm-i915-Force-VT-d-workarounds-when-running-as-a-gu.patch
