--- a/series.conf
+++ b/series.conf
@@ -57384,6 +57384,7 @@
 	patches.suse/r8152-Add-Lenovo-Powered-USB-C-Travel-Hub.patch
 	patches.suse/bnxt_en-Improve-stats-context-resource-accounting-wi.patch
 	patches.suse/ACPI-scan-Harden-acpi_device_add-against-device-ID-o.patch
+	patches.suse/RDMA-mlx5-Fix-wrong-free-of-blue-flame-register-on-e.patch
 	patches.suse/spi-cadence-cache-reference-clock-rate-during-probe.patch
 	patches.suse/nfsd4-readdirplus-shouldn-t-return-parent-of-export.patch
 	patches.suse/ACPI-scan-Make-acpi_bus_get_device-clear-return-poin.patch
