net/sonic: Add mutual exclusion for accessing shared state (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53552,6 +53552,7 @@
 	patches.suse/tun-add-mutex_unlock-call-and-napi.skb-clearing-in-t.patch
 	patches.suse/libertas-Fix-two-buffer-overflows-at-parsing-bss-des.patch
 	patches.suse/iwlwifi-mvm-fix-NVM-check-for-3168-devices.patch
+	patches.suse/0004-net-sonic-Add-mutual-exclusion-for-accessing-shared-.patch
 	patches.suse/net_sched-fix-datalen-for-ematch.patch
 	patches.suse/net-cxgb3_main-Add-CAP_NET_ADMIN-check-to-CHELSIO_GE.patch
 	patches.suse/net-mlx5-Fix-lowest-FDB-pool-size.patch
