net: tulip: Adjust indentation in {dmfe, uli526x}_init_module (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53635,6 +53635,7 @@
 	patches.suse/crypto-atmel-sha-fix-error-handling-when-setting-hma.patch
 	patches.suse/crypto-caam-qi2-fix-typo-in-algorithm-s-driver-name.patch
 	patches.suse/NFC-port100-Convert-cpu_to_le16-le16_to_cpu-E1-E2-to.patch
+	patches.suse/0005-net-tulip-Adjust-indentation-in-dmfe-uli526x-_init_m.patch
 	patches.suse/ppp-Adjust-indentation-into-ppp_async_input.patch
 	patches.suse/net-ena-implement-XDP-drop-support.patch
 	patches.suse/net-ena-Implement-XDP_TX-action.patch
