--- a/series.conf
+++ b/series.conf
@@ -53636,6 +53636,7 @@
 	patches.suse/crypto-caam-qi2-fix-typo-in-algorithm-s-driver-name.patch
 	patches.suse/NFC-port100-Convert-cpu_to_le16-le16_to_cpu-E1-E2-to.patch
 	patches.suse/0005-net-tulip-Adjust-indentation-in-dmfe-uli526x-_init_m.patch
+	patches.suse/0006-net-smc911x-Adjust-indentation-in-smc911x_phy_config.patch
 	patches.suse/ppp-Adjust-indentation-into-ppp_async_input.patch
 	patches.suse/net-ena-implement-XDP-drop-support.patch
 	patches.suse/net-ena-Implement-XDP_TX-action.patch
