--- a/series.conf
+++ b/series.conf
@@ -54071,6 +54071,7 @@
 	patches.suse/ipv6-Fix-nlmsg_flags-when-splitting-a-multipath-rout.patch
 	patches.suse/net-fib_rules-Correctly-set-table-field-when-table-n.patch
 	patches.suse/0008-net-atlantic-fix-use-after-free-kasan-warn.patch
+	patches.suse/0009-net-atlantic-fix-potential-error-handling.patch
 	patches.suse/net-phy-restore-mdio-regs-in-the-iproc-mdio-driver.patch
 	patches.suse/0001-net-dsa-b53-Ensure-the-default-VID-is-untagged.patch
 	patches.suse/NFC-pn544-Fix-a-typo-in-a-debug-message.patch
