--- a/series.conf
+++ b/series.conf
@@ -54326,6 +54326,7 @@
 	patches.suse/hsr-set-.netnsok-flag.patch
 	patches.suse/net_sched-cls_route-remove-the-right-filter-from-has.patch
 	patches.suse/net-mvneta-Fix-the-case-where-the-last-poll-did-not-.patch
+	patches.suse/0010-net-bcmgenet-keep-MAC-in-reset-until-PHY-is-up.patch
 	patches.suse/net-ena-fix-incorrect-setting-of-the-number-of-msix-.patch
 	patches.suse/net-ena-fix-request-of-incorrect-number-of-IRQ-vecto.patch
 	patches.suse/net-ena-avoid-memory-access-violation-by-validating-.patch
