net/liquidio: Delete driver version assignment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54493,6 +54493,7 @@
 	patches.suse/hsr-use-netdev_err-instead-of-WARN_ONCE.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
 	patches.suse/net-ethtool-Introduce-link_ksettings-API-for-virtual.patch
+	patches.suse/0012-net-liquidio-Delete-driver-version-assignment.patch
 	patches.suse/brcmfmac-abort-and-release-host-after-error.patch
 	patches.suse/net-mlx5-Expose-link-speed-directly.patch
 	patches.suse/net-mlx5-Expose-port-speed-when-possible.patch
