net/liquidio: Delete non-working LIQUIDIO_PACKAGE check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54494,6 +54494,7 @@
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
 	patches.suse/net-ethtool-Introduce-link_ksettings-API-for-virtual.patch
 	patches.suse/0012-net-liquidio-Delete-driver-version-assignment.patch
+	patches.suse/0013-net-liquidio-Delete-non-working-LIQUIDIO_PACKAGE-che.patch
 	patches.suse/brcmfmac-abort-and-release-host-after-error.patch
 	patches.suse/net-mlx5-Expose-link-speed-directly.patch
 	patches.suse/net-mlx5-Expose-port-speed-when-possible.patch
