--- a/series.conf
+++ b/series.conf
@@ -54893,6 +54893,7 @@
 	patches.suse/macvlan-fix-null-dereference-in-macvlan_device_event.patch
 	patches.suse/xfrm-Always-set-XFRM_TRANSFORMED-in-xfrm-4-6-_output.patch
 	patches.suse/vrf-Check-skb-for-XFRM_TRANSFORMED-flag.patch
+	patches.suse/0015-net-dsa-b53-Lookup-VID-in-ARL-searches-when-VLAN-is-.patch
 	patches.suse/net-dsa-b53-Fix-ARL-register-definitions.patch
 	patches.suse/net-dsa-b53-Rework-ARL-bin-logic.patch
 	patches.suse/mlxsw-Fix-some-IS_ERR-vs-NULL-bugs.patch
