net: dsa: b53: b53_arl_rw_op() needs to select IVL or SVL (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54896,6 +54896,7 @@
 	patches.suse/0015-net-dsa-b53-Lookup-VID-in-ARL-searches-when-VLAN-is-.patch
 	patches.suse/net-dsa-b53-Fix-ARL-register-definitions.patch
 	patches.suse/net-dsa-b53-Rework-ARL-bin-logic.patch
+	patches.suse/0016-net-dsa-b53-b53_arl_rw_op-needs-to-select-IVL-or-SVL.patch
 	patches.suse/mlxsw-Fix-some-IS_ERR-vs-NULL-bugs.patch
 	patches.suse/cxgb4-fix-adapter-crash-due-to-wrong-MC-size.patch
 	patches.suse/net-x25-Fix-x25_neigh-refcnt-leak-when-receiving-fra.patch
