cxgb4: fix the panic caused by non smac rewrite (bsc#1064802 bsc#1066129).

--- a/series.conf
+++ b/series.conf
@@ -57014,6 +57014,7 @@
 	patches.suse/bnxt_en-fix-error-return-code-in-bnxt_init_board.patch
 	patches.suse/bnxt_en-Release-PCI-regions-when-DMA-mask-setup-fail.patch
 	patches.suse/net-tls-missing-received-data-after-fast-remote-clos.patch
+	patches.suse/cxgb4-fix-the-panic-caused-by-non-smac-rewrite.patch
 	patches.suse/tcp-Set-INET_ECN_xmit-configuration-in-tcp_reinit_co.patch
 	patches.suse/s390-qeth-make-af_iucv-tx-notification-call-more-robust
 	patches.suse/s390-qeth-fix-af_iucv-notification-race
