--- a/series.conf
+++ b/series.conf
@@ -57388,6 +57388,7 @@
 	patches.suse/usb-gadget-select-CONFIG_CRC32.patch
 	patches.suse/usb-gadget-configfs-Preserve-function-ordering-after.patch
 	patches.suse/USB-serial-iuu_phoenix-fix-DMA-from-stack.patch
+	patches.suse/msft-hv-2201-x86-hyperv-Fix-kexec-panic-hang-issues.patch
 	patches.suse/NFS4-Fix-use-after-free-in-trace_event_raw_event_nfs.patch
 	patches.suse/net-sunrpc-interpret-the-return-value-of-kstrtou32-c.patch
 	patches.suse/pNFS-Mark-layout-for-return-if-return-on-close-was-n.patch
