--- a/series.conf
+++ b/series.conf
@@ -26521,6 +26521,7 @@
 	patches.suse/rtmutex_Remove_unused_argument_from_rt_mutex_proxy_unlock_.patch
 	patches.suse/futex_Use_pi_state_update_owner__in_put_pi_state_.patch
 	patches.suse/futex_Simplify_fixup_pi_state_owner_.patch
+	patches.suse/futex-Handle-faults-correctly-for-PI-futexes.patch
 
 	# that benefits. If unsure, mail performance@suse.de
 	# not enable without a specific example of a workload and machine
