locking/futex: Allow low-level atomic operations to return -EAGAIN (bsc#1149032).

--- a/series.conf
+++ b/series.conf
@@ -26512,6 +26512,9 @@
 	patches.suse/sched-optimize-latency-defaults.patch
 	patches.suse/0001-sched-wake_q-Reduce-reference-counting-for-special-u.patch
 
+	# bsc#1181349
+	patches.suse/0001-locking-futex-Allow-low-level-atomic-operations-to-r.patch
+
 	# that benefits. If unsure, mail performance@suse.de
 	# not enable without a specific example of a workload and machine
 	# cpufreq-related changes to give a hint of a possible approach. Do
