futex: Provide and use pi_state_update_owner() (bsc#1181349 bsc#1149032).

--- a/series.conf
+++ b/series.conf
@@ -26517,6 +26517,7 @@
 	patches.suse/0001-futex-Don-t-enable-IRQs-unconditionally-in-put_pi_st.patch
 	patches.suse/futex_Ensure_the_correct_return_value_from_futex_lock_pi_.patch
 	patches.suse/futex_Replace_pointless_printk_in_fixup_owner_.patch
+	patches.suse/futex_Provide_and_use_pi_state_update_owner_.patch
 
 	# that benefits. If unsure, mail performance@suse.de
 	# not enable without a specific example of a workload and machine
