--- a/series.conf
+++ b/series.conf
@@ -26514,6 +26514,7 @@
 
 	# bsc#1181349
 	patches.suse/0001-locking-futex-Allow-low-level-atomic-operations-to-r.patch
+	patches.suse/0001-futex-Don-t-enable-IRQs-unconditionally-in-put_pi_st.patch
 
 	# that benefits. If unsure, mail performance@suse.de
 	# not enable without a specific example of a workload and machine
