futex: Use pi_state_update_owner() in put_pi_state() (bsc#1181349 bsc#1149032).

--- a/series.conf
+++ b/series.conf
@@ -26519,6 +26519,7 @@
 	patches.suse/futex_Replace_pointless_printk_in_fixup_owner_.patch
 	patches.suse/futex_Provide_and_use_pi_state_update_owner_.patch
 	patches.suse/rtmutex_Remove_unused_argument_from_rt_mutex_proxy_unlock_.patch
+	patches.suse/futex_Use_pi_state_update_owner__in_put_pi_state_.patch
 
 	# that benefits. If unsure, mail performance@suse.de
 	# not enable without a specific example of a workload and machine
