--- a/series.conf
+++ b/series.conf
@@ -26515,6 +26515,7 @@
 	# bsc#1181349
 	patches.suse/0001-locking-futex-Allow-low-level-atomic-operations-to-r.patch
 	patches.suse/0001-futex-Don-t-enable-IRQs-unconditionally-in-put_pi_st.patch
+	patches.suse/futex-Fix-incorrect-should_fail_futex-handling.patch
 	patches.suse/futex_Ensure_the_correct_return_value_from_futex_lock_pi_.patch
 	patches.suse/futex_Replace_pointless_printk_in_fixup_owner_.patch
 	patches.suse/futex_Provide_and_use_pi_state_update_owner_.patch
