--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3177,3 +3177,4 @@ fa9f4275b20ec7b2a8fb05c66362d10b36f9efec # driver not compiled
 116721a560d66dee488f291a1d218b5fc6050678 # cleanup, not a fix
 980626ec1ca82a10dc04026a79dcbade23cc3438 # cleanup, not a fix
 94ce3b64c62d4b628cf85cd0d9a370aca8f7e43a # rather theoretical, too intrusive
+e6a7df96facdcf5b1f71eb3ec26f2f9f6ad61e57 # bsc#1222870 CVE-2024-26700: not affected: drm/amd/display: Fix MST Null Ptr for RV
