blacklist.conf: pure cleanup

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3175,3 +3175,4 @@ d50584d783313c8b05b84d0b07a2142f1bde46dd # driver not compiled
 fa9f4275b20ec7b2a8fb05c66362d10b36f9efec # driver not compiled
 116721a560d66dee488f291a1d218b5fc6050678 # cleanup, not a fix
 980626ec1ca82a10dc04026a79dcbade23cc3438 # cleanup, not a fix
+916acbf6b4b9262df7de1d2b6208a4efa209a88f # cleanup, no code change
