blacklist.conf: pure cleanup

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3176,3 +3176,4 @@ fa9f4275b20ec7b2a8fb05c66362d10b36f9efec # driver not compiled
 116721a560d66dee488f291a1d218b5fc6050678 # cleanup, not a fix
 980626ec1ca82a10dc04026a79dcbade23cc3438 # cleanup, not a fix
 916acbf6b4b9262df7de1d2b6208a4efa209a88f # cleanup, no code change
+3c9b04d9631ef49e8b3aad72607b09099c18e40d # cleanup, no code change
