--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3177,3 +3177,4 @@ fa9f4275b20ec7b2a8fb05c66362d10b36f9efec # driver not compiled
 980626ec1ca82a10dc04026a79dcbade23cc3438 # cleanup, not a fix
 916acbf6b4b9262df7de1d2b6208a4efa209a88f # cleanup, no code change
 3c9b04d9631ef49e8b3aad72607b09099c18e40d # cleanup, no code change
+6e5d7300cbe7c3541bc31f16db3e9266e6027b4b # cleanup, no code change
