blacklist.conf: pure cleanup

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3179,3 +3179,4 @@ fa9f4275b20ec7b2a8fb05c66362d10b36f9efec # driver not compiled
 3c9b04d9631ef49e8b3aad72607b09099c18e40d # cleanup, no code change
 6e5d7300cbe7c3541bc31f16db3e9266e6027b4b # cleanup, no code change
 5e7a0af793ce7ed528117145f856224deb81b7a7 # cleanup, no code change
+845e31e1101fc8533be52aff42d8f1ff48636024 # cleanup, no code change
