blacklist.conf: irrelevant in our configs

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3180,3 +3180,4 @@ fa9f4275b20ec7b2a8fb05c66362d10b36f9efec # driver not compiled
 6e5d7300cbe7c3541bc31f16db3e9266e6027b4b # cleanup, no code change
 5e7a0af793ce7ed528117145f856224deb81b7a7 # cleanup, no code change
 845e31e1101fc8533be52aff42d8f1ff48636024 # cleanup, no code change
+e63bde3d9417f8318d6dd0d0fafa35ebf307aabd # build fix irrelevant in our configs
