blacklist.conf: add commits for some git-fixes to be skipped

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3184,3 +3184,8 @@ e6a7df96facdcf5b1f71eb3ec26f2f9f6ad61e57 # bsc#1222870 CVE-2024-26700: not affec
 845e31e1101fc8533be52aff42d8f1ff48636024 # cleanup, no code change
 e63bde3d9417f8318d6dd0d0fafa35ebf307aabd # build fix irrelevant in our configs
 e95d392d160baa2fbc1c0cac672abc472985418b # cleanup, no code change
+62ec2092095b678ff89ce4ba51c2938cd1e8e630 # breaks kabi (scsi_host_lookup)
+d34ee535705eb43885bc0f561c63046f697355ad # code has changed too much for patch to apply correctly
+c91774818b041ed290df29fb1dc0725be9b12e83 # code has changed and some version seems already present
+9ddf190a7df77b77817f955fdb9c2ae9d1c9c9a3 # config change for an unused MIPs option
+7ea3e7763c50b20a8bd25cf524ea0c6463de69be # requires too many other commits not present
