--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3186,3 +3186,4 @@ e63bde3d9417f8318d6dd0d0fafa35ebf307aabd # build fix irrelevant in our configs
 e95d392d160baa2fbc1c0cac672abc472985418b # cleanup, no code change
 9474c62ab65f30f0e56802a52bddf69a9e62b127 # no sch_fq_pie here, ec97ecf1ebe4 ("net: sched: add Flow Queue PIE packet scheduler") v5.6-rc1~151^2~44^2
 40a74870b2d1d3d44e13b3b73c6571dd34f5614d # orangefs not supported
+77f30bfcfcf484da7208affd6a9e63406420bf91 # fscrypt: depends on a no-key format update
