blacklist.conf: fs: fget/fput optimization
Commit looks safe but is not a fix rather than an optimization.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3187,3 +3187,4 @@ e95d392d160baa2fbc1c0cac672abc472985418b # cleanup, no code change
 9474c62ab65f30f0e56802a52bddf69a9e62b127 # no sch_fq_pie here, ec97ecf1ebe4 ("net: sched: add Flow Queue PIE packet scheduler") v5.6-rc1~151^2~44^2
 40a74870b2d1d3d44e13b3b73c6571dd34f5614d # orangefs not supported
 77f30bfcfcf484da7208affd6a9e63406420bf91 # fscrypt: depends on a no-key format update
+091141a42e15fe47ada737f3996b317072afcefb # fs: fget/fput optimization
