blacklist.conf: btrfs: config fix for 256k pages

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3189,3 +3189,4 @@ e95d392d160baa2fbc1c0cac672abc472985418b # cleanup, no code change
 77f30bfcfcf484da7208affd6a9e63406420bf91 # fscrypt: depends on a no-key format update
 091141a42e15fe47ada737f3996b317072afcefb # fs: fget/fput optimization
 e2731e55884f2138a252b0a3d7b24d57e49c3c59 # btrfs: metadata dump v2 definition only
+b05fbcc36be1f8597a1febef4892053a0b2f3f60 # btrfs: config fix for 256k pages
