blacklist.conf: Add a1fd0b9d751f sched/fair: Allow disabling sched_balance_newidle with sched_relax_domain_level

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3188,3 +3188,4 @@ e95d392d160baa2fbc1c0cac672abc472985418b # cleanup, no code change
 40a74870b2d1d3d44e13b3b73c6571dd34f5614d # orangefs not supported
 77f30bfcfcf484da7208affd6a9e63406420bf91 # fscrypt: depends on a no-key format update
 091141a42e15fe47ada737f3996b317072afcefb # fs: fget/fput optimization
+a1fd0b9d751f840df23ef0e75b691fc00cfd4743 # old knob semantic, not needed without c5b0a7eefc70150, see bsc#1224807
