blacklist.conf: add not-needed or too intrusive tracing fixes

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3188,3 +3188,7 @@ e95d392d160baa2fbc1c0cac672abc472985418b # cleanup, no code change
 40a74870b2d1d3d44e13b3b73c6571dd34f5614d # orangefs not supported
 77f30bfcfcf484da7208affd6a9e63406420bf91 # fscrypt: depends on a no-key format update
 091141a42e15fe47ada737f3996b317072afcefb # fs: fget/fput optimization
+44dc5c41b5b1267d4dd037d26afc0c4d3a568acb # memory optimization
+b3594573681b53316ec0365332681a30463edfd6 # too intrusive, old bug and limited risk
+7af9ded0c2caac0a95f33df5cb04706b0f502588 # intrusive rework
+2aa043a55b9a764c9cbde5a8c654eeaaffe224cf # too intrusive, old bug and limited risk
