blacklist.conf: update blacklist

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3176,3 +3176,5 @@ d50584d783313c8b05b84d0b07a2142f1bde46dd # driver not compiled
 fa9f4275b20ec7b2a8fb05c66362d10b36f9efec # driver not compiled
 116721a560d66dee488f291a1d218b5fc6050678 # cleanup, not a fix
 980626ec1ca82a10dc04026a79dcbade23cc3438 # cleanup, not a fix
+6ad959b6703e2c4c5d7af03b4cfd5ff608036339 # due to MU56
+cbe499977bc36fedae89f0a0d7deb4ccde9798fe # due to MU56
