--- a/blacklist.conf
+++ b/blacklist.conf
@@ -178,6 +178,7 @@ arch/powerpc/mm/tlb_nohash*
 arch/powerpc/perf/mpc7450-pmu.c
 arch/powerpc/sysdev/dcr.c
 arch/powerpc/sysdev/dcr-low.S
+arch/powerpc/sysdev/fsl_msi.c
 arch/powerpc/sysdev/tsi108_pci.c
 
 
