--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3189,3 +3189,4 @@ d34ee535705eb43885bc0f561c63046f697355ad # code has changed too much for patch t
 c91774818b041ed290df29fb1dc0725be9b12e83 # code has changed and some version seems already present
 9ddf190a7df77b77817f955fdb9c2ae9d1c9c9a3 # config change for an unused MIPs option
 7ea3e7763c50b20a8bd25cf524ea0c6463de69be # requires too many other commits not present
+60c5fd2e8f3c42a5abc565ba9876ead1da5ad2b7 # a cleanup-only fix that breaks kABI
