--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3209,3 +3209,4 @@ c91774818b041ed290df29fb1dc0725be9b12e83 # code has changed and some version see
 ec29d0ac29be366450a7faffbcf8cba3a6a3b506 # bsc#1225047 CVE-2021-47328: breaks kABI
 b39f2d10b86d0af353ea339e5815820026bca48f # bsc#1225559 CVE-2023-52811: extensive changes on changed code not needed
 51e6ed83bb4ade7c360551fa4ae55c4eacea354b # bsc#1222879 CVE-2021-47193: breaks kABI
+b513d30d59bb383a6a5d6b533afcab2cee99a8f8 # bsc#1223013 CVE-2024-26482: does not apply
